Fix z-index from pahe-header after

--- a/src/stylesheets/components/_page-banner.scss
+++ b/src/stylesheets/components/_page-banner.scss
@@ -102,6 +102,7 @@ You can use the following modifiers:
       left: 0;
       position: absolute;
       width: 100%;
+      z-index: -1;
     }
   }
 }
